# Copyright (C) 2023 HiHope Open Source Organization .
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# The list of part name that need to enable cfi and disable debug mode
enable_cfi_part_list = [
  # enabled in OH4.0
  "audio_framework",
  "histreamer",
  "av_session",
  "huks",
  "certificate_manager",
  "image_framework",
  "media_library",
  "user_file_service",
  "contacts_data_hap",
  "crypto_framework",
  "wpa_supplicant",
  "netmanager_base",
  "camera_framework",
  "player_framework",
  "screenlock_mgr",
  "nfc",
  "wifi",
  "dsoftbus",
  "hilog",
  "bluetooth",
  "bluetooth_service",

  # enabled in OH4.1
  "device_security_level",
  "face_auth",
  "fingerprint_auth",
  "pin_auth",
  "user_auth_framework",
  "enterprise_device_management",
  "wallpaper_mgr",
  "resource_schedule_service",
  "data_object",
  "device_auth",
  "data_share",
  "time_service",
  "imf",
  "location",
  "device_manager",
  "distributed_audio",
  "distributed_camera",
  "distributed_hardware_fwk",
  "distributed_input",
  "distributed_screen",
  "device_info_manager",
  "dmsfwk",
  "usb_manager",
  "sensor",
  "battery_manager",
  "battery_statistics",
  "display_manager",
  "power_manager",
  "thermal_manager",
  "device_status",
  "motion",
  "spatial_awareness",
  "algorithm",
  "window_manager",
  "qos_manager",
  "call_manager",
  "cellular_call",
  "core_service",
  "rill_adapter",
  "sms_mms",
  "state_registry",
  "telephony_data",
  "common_event_service",
  "distributed_notification_service",
  "eventhandler",
  "os_account",
  "access_token",
  "dupdate_engine",
  "input",
  "device_attest",
]

# The list of part name that need to enable intsan
enable_intsan_part_list = []

# The list of build target that bypass the cfi check
bypass_cfi_target_list = [
  # data_share : //foundation/distributeddatamgr/data_share
  "datashare_provider",  #cfi not configured

  # time_service : //base/time/time_service
  "time_system_ability",
  "time_system_ability_static",

  # location : //base/location
  "lbsservice_gnss",
  "lbsservice_network",
  "lbsservice_passive",
  "locator_sdk",
  "geolocation",
  "lbsservice_common",
  "locator_agent",
  "geolocation_static",
  "lbsservice_geocode",
  "geolocationmanager",

  # device_manager : //foundation/distributedhardware/device_manager
  "devicemanagersdk",  #cfi not configured
  "devicemanagerdependency",  #cfi not configured
  "devicemanagerradar",  #cfi not configured

  # distributed_audio : //foundation/distributedhardware/distributed_audio
  "distributed_audio_handler",  #cfi not configured

  # distributed_camera : //foundation/distributedhardware/distributed_camera
  "distributed_camera_source",
  "distributed_camera_data_process",

  # distributed_hardware_fwk : //foundation/distributedhardware/distributed_hardware_fwk
  "hardwaremanager",  #cfi not configured
  "distributed_av_sender",  #cfi not configured
  "distributed_av_receiver",  #cfi not configured
  "histreamer_ability_querier",  #cfi not configured
  "histreamer_ability_querier_core",  #cfi not configured
  "avtrans_input_filter",  #cfi not configured
  "avtrans_output_filter",  #cfi not configured
  "plugin_AVTransDaudioInput",  #cfi not configured
  "plugin_AVTransDsoftbusInput",  #cfi not configured
  "plugin_AVTransDscreenInput",  #cfi not configured
  "plugin_AVTransDsoftbusInputAudio",  #cfi not configured
  "plugin_AVTransDscreenOutput",  #cfi not configured
  "plugin_AVTransDsoftbusOutputAudio",  #cfi not configured
  "plugin_AVTransDaudioOutput",  #cfi not configured
  "plugin_AVTransDsoftbusOutput",  #cfi not configured

  # device_info_manager : //foundation/deviceprofile/device_info_manager
  "distributed_device_profile_common",  #cfi not configured
  "distributed_device_profile_sdk",  #cfi not configured
  "distributed_device_profile_svr",  #cfi not configured
  "deviceprofileradar",  #cfi not configured

  # usb_manager : //base/use/usb_manager
  "usbsrv_client",
  "usb",
  "usbmanager",

  # sensor : //base/sensors/sensor
  "sensor_rust_util_ffi",

  # battery_manager : //base/powermgr/battery_manager
  "batterysrv_client",
  "charger",
  "batteryinfo",
  "batterysrv_stub",
  "battery",

  # battery_statistics ：//base/powermgr/battery_statistics
  "batterystatistics",
  "batterystats_client",
  "batterystats_service",
  "batterystats_stub",
  "batterystats_utils",  #cfi not configured

  # display_manager ：//base/powermgr/display_manager
  "brightness",
  "displaymgr",
  "displaymgr_stub",

  # power_manager : //base/powermgr/power_manager
  "power-shell",
  "power_sysparam",
  "power_permission",
  "power_setting",
  "powermgr_client",  #cfi not configured
  "power_ffrt",
  "power_vibrator",
  "powermgr_stub",  #cfi not configured
  "power_utils",  #cfi not configured
  "power",  #cfi not configured
  "runninglock",  #cfi not configured

  # thermal_manager : //base/powermgr/thermal_manager
  "thermalservice",
  "mock_thermalsrv_client",
  "thermalsrv_client",
  "thermalmgr_listener",
  "thermal_protector",
  "thermal",
  "thermal_utils",
  "thermalmgr_stub",
  "thermalmgr_proxy",

  # device_status ：//base/msdp/device_status
  "devicestatus_mock",  #cfi not configured
  "devicestatus_static_service",  #cfi not configured
  "devicestatus_vdev",  #cfi not configured
  "devicestatus_vdev_builders",  #cfi not configured
  "vdevadm",  #cfi not configured

  # window_manager : //foundation/window/window_manager
  "setresolution_screen",  #cfi not configured
  "libsetresolution_util",  #cfi not configured
  "libwmutil",  #cfi not configured
  "screensessionmanager_napi",  #cfi not configured
  "demo_mirror_screen_listener",  #cfi not configured
  "demo_screenshot_listener",  #cfi not configured
  "demo_snapshot_virtual_screen",  #cfi not configured
  "demo_system_sub_window",  #cfi not configured
  "demo_freeze_display",  #cfi not configured
  "demo_water_mark_listener",  #cfi not configured
  "demo_session_manager",  #cfi not configured
  "ws_unittest_common",  #cfi not configured
  "utils_unittest_common",  #cfi not configured
  "window_extension_unittest_common",  #cfi not configured
  "dm_unittest_common",  #cfi not configured
  "dms_systemtest_common",  #cfi not configured
  "dmserver_unittest_common",  #cfi not configured
  "wm_unittest_common",  #cfi not configured
  "libtestutil",  #cfi not configured
  "wms_systemtest_common",  #cfi not configured
  "libwm_lite",  #cfi not configured
  "libdm",  #cfi not configured

  # core_service : //base/telephony/core_service
  "vcard",  #cfi not configured
  "libtel_vcard",  #cfi not configured

  # common_event_service : //base/notification/common_event_service
  "cesfwk_core",  #cfi not configured
  "cesfwk_innerkits",
  "cesfwk_services_static",  #cfi not configured
  "tools_cem_source_set",  #cfi not configured
  "actscesfwk_kits_test",  #cfi not configured
  "cesfwk_kits_test",  #cfi not configured

  # eventhandler : //base/notification/eventhandler
  "libeventhandler",

  # os_account : //base/account/os_account
  "accountmgr",

  # access_token : //base/security/access_token
  "token_sync_manager_service",
  "accesstoken_manager_service",
  "privacy_manager_service",
  "libaccesstoken_sdk",
  "libnativetoken",
  "libprivacy_sdk",
  "libtoken_callback_sdk",
  "libtokenid_sdk",
  "libtoken_setproc",  #cfi not configured
  "libcodesignature_analysis",
  "atm",  #cfi not configured
  "libabilityaccessctrl",
  "libnapi_common",
  "libprivacymanager",
  "libtokensync_sdk",
  "accesstoken_service_common",
  "accesstoken_common_cxx",
  "accesstoken_communication_adapter_cxx",
  "privacy_communication_adapter_cxx",
  "accesstoken_permission_map",

  # input : //foundation/multimodalinput/input
  "mmi_rust_key_config",  #cfi not configured
  "mmi_rust",  #cfi not configured

  # device_auth : //base/security/device_auth
  "hichainsdk",  #cfi not configured
  "hichainsdk_static",  #cfi not configured
  "device_auth_test_hal",  #cfi not configured
  "deviceauth_service",
  "deviceauth_sdk",

  # data_object ： //foundation/distributeddatamgr/data_object
  "distributeddataobject_static",

  # resource_schedule_service : //foundation/resourceschedule/resource_schedule_service
  "component_sched_plugin",  #cfi not configured
  "device_standby_plugin",  #cfi not configured
  "resschedsvc",
  "ressched_test",  #cfi not configured
  "process_proup_test",  #cfi not configured

  #device_security_level : //base/security/device_security_level
  "messenger_static",  # blocklist contains test code only
  "utils_static",  # blocklist contains test code only
  "DslmUnitTest",  # blocklist contains test code only
  "dslm_extension_dfx",  # blocklist contains test code only
  "service_common_obj",  # blocklist contains test code only
  "service_sa_static",  # blocklist contains test code only
  "service_dslm_obj",  # blocklist contains test code only
  "service_dslm_test_obj",  # blocklist contains test code only
  "service_msg_obj",  # blocklist contains test code only
  "oem_common_obj",  # blocklist contains test code only
  "dslm_sdk",  # blocklist contains test code only
  "dslm_service",  # blocklist contains test code only
  "dslm_oem_ext",  # blocklist contains test code only
  "dslm_ohos_cred_obj",  # blocklist contains test code only

  # face_auth : //base/useriam/face_auth
  "iam_utils",
  "faceauth",
  "faceauth_framework",
  "faceauth_framework_stub",
  "faceauthservice_source_set",
  "faceauthservice",
  "faceauthservice_ex",
  "faceauthservice_ex_source_set",
  "faceauth_framework_stub_fuzzer",  #cfi not configured
  "faceauthservice_source_set_fuzzer",  #cfi not configured

  # pin_auth : //base/useriam/pin_auth
  "iam_utils",
  "pinauth_framework_source_set",
  "pinauth_framework",
  "pinauth_ipc",
  "pinauthservice_source_set",
  "pinauthservice",
  "pinauth_ipc_fuzzer",  #cfi not configured
  "pinauthservice_source_set_fuzzer",  #cfi not configured

  # user_auth_framework ：//base/useriam/user_auth_framework
  "iam_thread_pool",
  "iam_utils",
  "iam_test",
  "userauthextensionability_napi",
  "user_auth_extension",
  "user_auth_extension_module",
  "userauth",
  "attributes",
  "dfx",
  "userauth_executors",
  "userauth_client",
  "userauth_client_ipc",
  "userauth_service_ipc",
  "userauthservice",
  "userauth_service_core",
  "userauth_service_base",
  "userauth_service_context",
  "userauth_services_ipc",
  "attributes_fuzzer",  #cfi not configured
  "dfx_fuzzer",  #cfi not configured
  "userauth_client_ipc_fuzzer",  #cfi not configured
  "userauth_service_base_fuzzer",  #cfi not configured
  "userauth_service_core_fuzzer",  #cfi not configured
  "userauth_service_context_fuzzer",  #cfi not configured
  "userauth_service_ipc_fuzzer",  #cfi not configured
  "userauth_services_ipc_fuzzer",  #cfi not configured
  "iam_thread_pool_fuzzer",  #cfi not configured
  "iam_utils_fuzzer",  #cfi not configured
  "iam_test_fuzzer",  #cfi not configured

  # fingerprint_auth : //base/useriam/fingerprint_auth
  "fingerprintauthservice_source_set_fuzzer",  #cfi not configured

  # wallpaper_mgr : //base/theme/wallpaper_mgr
  "wallpapermanager",  #cfi not configured
  "wallpapermanager_static",  #cfi not configured
  "wallpaper_utils",  #cfi not configured

  # audio_framework : //foundation/multimedia/audio_framework
  "audio_capturer_gateway",
  "oh_audio_capturer_test",
  "oh_audio_capturer_lowlatency_test",
  "audio_opensles_player_test",
  "audio_renderer_gateway",
  "oh_audio_renderer_test",
  "audio_opensles_recorder_test",
  "audio_capturer_test",
  "audio_renderer_test",
  "audio_toneplayer_test",
  "audio_latency_accuracy_test",
  "audio_render_mode_callback_test",
  "audio_process_client_test",
  "audio_voip_test",
  "audio_hdi_device_test",
  "audio_policy_test",
  "audio_interrupt_test",
  "audio_service_playback_test",
  "interrupt_multi_renderer_test",
  "audio_faststream_playback_test",
  "audio_blendmode_test",
  "audio_service_record_test",
  "audio_multichannel_test",
  "audio_schedule",
  "ohaudio",
  "opensles",
  "audio_common",
  "audio_dump",
  "audio",
  "audio_client",
  "audio_policy_service",
  "audio_capturer",
  "audio_renderer",
  "audio_process_service",
  "audio_toneplayer",
  "audio_service",
  "audio_policy_client",
  "module-loopback",
  "module-inner-capturer-sink",
  "module-hdi-sink",
  "module-receiver-sink",
  "module-hdi-source",
  "audio_utils",
  "audio_bluetooth_client",
  "pulse_audio_service_adapter",
  "audio_capturer_source",
  "audio_renderer_sink",
  "playback_capturer",
  "audio_effect",
  "fast_audio_capturer_source",
  "fast_audio_renderer_sink",
  "remote_audio_capturer_source",
  "bluetooth_renderer_sink",
  "remote_fast_audio_capturer_source",
  "remote_audio_renderer_sink",
  "audio_capturer_file_source",
  "remote_fast_audio_renderer_sink",
  "capturer_source_adapter",
  "audio_renderer_file_sink",
  "renderer_sink_adapter",
  "audio_device_manager",

  # histreamer : //foundation/multimedia/histreamer
  "histreamer_pipeline_base",
  "histreamer_plugin_intf",
  "plugin_base",
  "ffmpeg_convert",
  "histreamer_pipeline",
  "histreamer_plugin_core",
  "std_engine_factory",
  "histreamer_foundation",
  "codec_filters",
  "muxer_filter",
  "media_synchronous_sink",
  "audio_capture_filter",
  "scene_common",
  "demuxer_filter",
  "audio_sink_filter",
  "media_source_filter",
  "video_sink_filter",
  "video_capture_filter",
  "output_sink_filter",
  "ffmpeg_adapter_common",
  "filesource",
  "httpsource",
  "std_stream_source",
  "ffmpeg_audio_decoders",
  "std_audio_capture",
  "filefdsource",
  "audio_server_sink",
  "file_fd_sink",
  "std_video_surface_sink",
  "ffmpeg_demuxers",
  "std_plugin_codec_adapter",
  "ffmpeg_audio_encoders",
  "histreamer_recorder",
  "histreamer_player",
  "ffmpeg_video_decoders",
  "ffmpeg_video_encoders",
  "ffmpeg_muxers",

  # av_session : //foundation/multimedia/av_session
  "avcastpicker",
  "mediacontrolextensionability_napi",
  "avsession_client",
  "mediacontrolextensioncontext_napi",
  "media_control_extension",
  "media_control_extension_module",
  "avsession_item",
  "avsession_common",
  "avsession_napi",
  "avsession_utils",
  "avsession_cast_client",
  "avsession_service",
  "remote_session_source",
  "avsession_router",
  "remote_session_sink",
  "avsession_cast_item",

  # huks : //base/security/huks
  "libhukssdk_static",
  "cipher_napi",
  "cipher_shared",
  "huks_modify_old_version_key_util",

  # certificate_manager : //base/security/certificate_manager
  "libcert_manager_fuzz_test_common_static",

  # image_framework : //foundation/multimedia/image_framework
  "pixelconvertadapter_static",
  "image_static",
  "image_utils_static",
  "log_mock_static",
  "utils_mock_static",
  "pluginmanager_static",
  "jpegplugin",
  "textureEncoderCL",

  # media_library : //foundation/multimedia/media_library
  "scanner",
  "medialibrary_data_extension",

  # contacts_data_hap : //applications/standard/contacts_data
  "contactsdataability",

  # crypto_framework : //base/security/crypto_framework
  "crypto_plugin_common",
  "crypto_framework_lib",
  "cryptoframework_napi",

  # wpa_supplicant : //third_party/wpa_supplicant
  "wpa_cli",
  "hostapd_cli",
  "wpa_supplicant",
  "hostapd",
  "wpa_client",
  "wpa_client_updater",
  "wpa",
  "wpa_sys",
  "wpa_updater",

  # netmanager_base : //foundation/communication/netmanager_base
  "net_conn_parcel",
  "net_policy_parcel",
  "net_native_parcel",
  "netsys_native_manager_static",
  "net_stats_parcel",
  "libip4tc",
  "libip6tc",
  "libxtables",
  "libext4",
  "libext6",
  "net_connection",
  "net_conn_manager_if",
  "net_conn_manager",
  "napi_utils",
  "net_policy_manager",
  "net_native_manager_if",
  "net_stats_manager_if",
  "net_policy_manager_if",
  "socket_permission",
  "netconn_ndk",

  # camera_framework : //foundation/multimedia/camera_framework
  "camera_video",
  "camera_capture",
  "camera_capture_video",
  "camera_capture_mode",
  "camera_framework",
  "camera_napi",
  "camera_service",

  # player_framework : //foundation/multimedia/player_framework
  "media_format",
  "audio_ringtone_client",
  "media_seccomp_filter",
  "media_engine_common_avcodeclist",
  "media_engine_gst_common",
  "media_engine_gst_loader",
  "media_engine_gst_recorder",
  "media_engine_gst_factory",
  "media_gst_dfx",
  "media_engine_gst_player",
  "media_engine_gst_avcodec",
  "media_engine_gst_avmeta",
  "gst_subtitle_sink_base",
  "gst_subtitle_parse_plugin",
  "gst_mem_sink_base",
  "gst_mem_src_base",
  "media_engine_dfx",
  "gst_codec_plugins_common",
  "soundpool_client",
  "gst_mem_sink",
  "gst_codec_bin",
  "gst_audio_server_sink",
  "gst_subtitle_sink",
  "gst_audio_capture_src",
  "gst_mem_src",
  "gst_media_common",
  "gst_codec_plugin_hdi",
  "native_avscreen_capture",

  # wifi : //foundation/communication/wifi
  "crpc_client_updater",
  "WifiHalVendorTest",
  "crpc_server",
  "crpc_client",
  "wifi_hal_service",
  "wifi_hal_service_updater",
  "wifi_scan_service_impl",
  "wifi_device_service_impl",
  "wifi_utils",
  "wifi_hotspot_service_impl",
  "wifi_p2p_service_impl",
  "wifi_device_proxy_impl",
  "wifi_hotspot_proxy_impl",
  "wifi_scan_proxy_impl",
  "wifi_p2p_proxy_impl",
  "rpc_server",
  "rpc_client",
  "wifi",
  "wifiext",
  "wifi_native_js",
  "wifimanager",
  "wifimanagerext",
  "wifi_sdk",

  # dsoftbus : //foundation/communication/dsoftbus
  "softbus_server",

  # hilog : //base/hiviewdfx/hilog
  "libhilog",
  "libhilog_base",
  "hilog",
  "hilogd",
  "libhilognapi_src",
  "libhilog_source_ohos",
  "libhilog_source_windows",
  "libhilog_source_mac",
  "libhilog_source_linux",
  "libhilog_source_android",
  "libhilog_source_ios",
  "libhilog_base_source",
  "libhilog_source_ohos",
  "libhilog_source_windows",
  "libhilog_source_mac",
  "libhilog_source_linux",
  "libhilog_source_android",
  "libhilog_source_ios",
  "libhilog_base_source",

  # bluetooth : //foundation/communication/bluetooth
  "btframework",
  "bluetooth",
  "bluetoothmanager",
  "btcommon",
  "a2dp",
  "access",
  "baseprofile",
  "ble",
  "connection",
  "constant",
  "hfp",
  "hid",
  "pan",
  "socket",

  # bluetoth_service : //foundation/communication/bluetooth_service
  "bluetooth_server",
  "btservice",
  "btsbc",
  "btdummy",
  "btstack",
  "bluetooth_hdi_adapter",
  "btipc_static",
  "btipc_service",
]

# The list of build target that bypass the intsan check
bypass_intsan_target_list = []
