# Copyright (C) 2025 Phytium Technology Co., Ltd.  All rights reserved.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_prebuilt_etc("hdf_alsa_adapter_json") {
  source = "alsa_adapter.json"

  relative_install_dir = "hdfconfig"
  install_images = [ chipset_base_dir ]
  subsystem_name = "hdf"
  part_name = "product_${device_name}"
}

ohos_prebuilt_etc("hdf_alsa_path_json") {
  source = "alsa_paths.json"

  relative_install_dir = "hdfconfig"
  install_images = [ chipset_base_dir ]
  subsystem_name = "hdf"
  part_name = "product_${device_name}"
}

ohos_prebuilt_etc("audio_policy_config") {
  source = "config/audio_policy_config.xml"
  subsystem_name = "hdf"
  relative_install_dir = "audio"
  install_images = [ chipset_base_dir ]
  part_name = "product_${device_name}"
}

group("hdf_audio_config") {
  deps = [
    ":audio_policy_config",
    ":hdf_alsa_adapter_json",
    ":hdf_alsa_path_json",
  ]
}

