# Copyright (c) 2025 Phytium Technology Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//drivers/hdf_core/adapter/uhdf2/hcs/hcs.gni")
hdf_hcs_source = "./hdf.hcs"

hdf_hcb("hdf_default.hcb") {
  source = hdf_hcs_source
  part_name = "product_${device_name}"
  subsystem_name = "product_${device_name}"
}

hdf_cfg("hdf_devhost.cfg") {
  source = hdf_hcs_source
  part_name = "product_${device_name}"
  subsystem_name = "product_${device_name}"
}

ohos_prebuilt_etc("hdf_peripheral.cfg") {
  source = "hdf_peripheral.cfg"
  relative_install_dir = "init"
  install_images = [ chipset_base_dir ]
  subsystem_name = "product_${device_name}"
  part_name = "product_${device_name}"
}

group("hdf_config") {
  deps = [
    ":hdf_default.hcb",
    ":hdf_devhost.cfg",
    ":hdf_peripheral.cfg",
  ]
}
