# Copyright (c) 2020-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

static_library("sle_gas_demo") {
  sources = [
    #"sle_uart_server_adv.c",
    #"sle_uart_server.c",
    "hal_iot_gpio_ex.c",
    "sle_uart_client.c",
  ]

  defines = [
    "CONFIG_UART_SUPPORT_TX",
    "CONFIG_UART_SUPPORT_RX",
  ]
  include_dirs = [
    "//base/startup/init/interfaces/innerkits/include",
    "//device/soc/hisilicon/ws63v100/sdk/include/driver",
    "//device/soc/hisilicon/ws63v100/sdk/drivers/chips/ws63/rom/drivers/chips/ws63/porting/pinctrl",
    "//device/soc/hisilicon/ws63v100/sdk/include/middleware/services/bts/sle",
    "//foundation/communication/sle",
    "//device/soc/hisilicon/ws63v100/sdk/kernel/osal/include/debug",
    "//device/soc/hisilicon/ws63v100/sdk/kernel/osal/include/memory",
    "//device/soc/hisilicon/ws63v100/sdk/kernel/osal/include/schedule",
    "//device/soc/hisilicon/ws63v100/sdk/include/driver",
    "//device/soc/hisilicon/ws63v100/sdk/drivers/chips/ws63/rom/drivers/chips/ws63/porting/pinctrl",
    "//base/iothardware/peripheral/interfaces/inner_api",
    "//device/soc/hisilicon/ws63v100/sdk/drivers/drivers/hal/uart",
    "//device/soc/hisilicon/ws63v100/sdk/drivers/chips/ws63/porting/uart",
    "//device/soc/hisilicon/ws63v100/sdk/middleware/utils/common_headers/native",
  ]
}
