# Copyright (C) 2024 HiHope Open Source Organization .
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

ohos_sources = [ "MQTTClient.c" ]

ohos_defines = [
  "MQTT_TASK",
  "MQTTCLIENT_PLATFORM_HEADER=mqtt_ohos.h",
  "LWIP_CONFIG_FILE=\"lwip/lwipopts_default.h\"",
]

ohos_includes = [
  "ohos",
  "../../MQTTPacket/src",
]

ohos_sources += [ "ohos/mqtt_ohos_cmsis.c" ]
ohos_defines += [ "OHOS_CMSIS" ]
ohos_includes += [
  "//kernel/liteos_m/kal",
  "//device/soc/hisilicon/ws63v100/sdk/open_source/lwip/lwip_v2.1.3/src/include",
  "//device/soc/hisilicon/ws63v100/sdk/open_source/lwip/lwip_adapter/liteos_207/src/include",
  "//device/soc/hisilicon/ws63v100/sdk/kernel/liteos/liteos_v208.5.0/Huawei_LiteOS/compat/linux/include",
  "//device/soc/hisilicon/ws63v100/sdk/kernel/osal/include/lock",
  "//device/soc/hisilicon/ws63v100/sdk/kernel/osal/include/schedule",
]

static_library("paho-embed-mqtt3cc") {
  sources = ohos_sources

  defines = ohos_defines

  cflags = [
    "-Wno-sign-compare",
    "-Wno-unused-parameter",
  ]

  include_dirs = ohos_includes
}
