# Copyright (C) 2024 HiHope Open Source Organization .
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

mqtt_packet_common_sources = [
  "MQTTDeserializePublish.c",
  "MQTTFormat.c",
  "MQTTPacket.c",
  "MQTTSerializePublish.c",
]

mqtt_packet_client_sources = [
  "MQTTConnectClient.c",
  "MQTTSubscribeClient.c",
  "MQTTUnsubscribeClient.c",
]

mqtt_packet_server_sources = [
  "MQTTConnectServer.c",
  "MQTTSubscribeServer.c",
  "MQTTUnsubscribeServer.c",
]

static_library("paho-embed-mqtt3c") {
  cflags = [ "-Wno-unused-parameter" ]

  sources = mqtt_packet_common_sources
  sources += mqtt_packet_client_sources
  sources += mqtt_packet_server_sources
}
