# Copyright (C) 2024 HiHope Open Source Organization .
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

ohos_sources = [
   "mqtt_test.c",
]

ohos_includes = [
    "../../src",
    "../../src/ohos",
    "../../../MQTTPacket/src",
]

ohos_cflags = [
    "-Wno-sign-compare",
    "-Wno-unused-parameter",
]

ohos_defines = [
    "MQTT_TASK",
    "MQTTCLIENT_PLATFORM_HEADER=mqtt_ohos.h"
]

if (ohos_kernel_type == "liteos_riscv" || ohos_kernel_type == "liteos_m") {
    ohos_sources += [
        "mqtt_test_cmsis.c",
        "wifiiot_at.c",         # AT接口（1.0+被去掉了，补回来）
        "hal_wifiiot_at.c",     # AT接口（1.0+被去掉了，补回来）
    ]

    ohos_includes += [
        "//commonlibrary/utils_lite/include",
        "//kernel/liteos_m/kal",
        "//base/iothardware/peripheral/interfaces/inner_api",
        "//foundation/communication/wifi_lite/interfaces/wifiservice",
    ]

    ohos_defines += [
        "CMSIS"
    ]

    static_library("mqtt_test") {
        cflags = ohos_cflags
        defines = ohos_defines
        sources = ohos_sources
        include_dirs = ohos_includes
    }
} else {
    ohos_sources += [
        "mqtt_test_posix.c"
    ]

    deps = [
        "../../src:paho-embed-mqtt3cc",
        "../../../MQTTPacket/src:paho-embed-mqtt3c",
    ]

    executable("mqtt_test") {
        cflags = ohos_cflags
        defines = ohos_defines
        sources = ohos_sources
        include_dirs = ohos_includes
    }
}
